--- a/css/style.css
+++ b/css/style.css
@@ -364,3 +364,59 @@ li > a:only-child:after { content: ''; }
     -ms-border-radius: 0px;
     -o-border-radius: 0px;
 }
+
+/*--/banner-info--*/
+
+.banner {
+    background: #6a67ce;
+    position: relative;
+    z-index: 1;
+}
+
+
+.banner-info-grid h2 {
+    color: #fff;
+    display: inline-block;
+    font-size: 3.5em;
+    text-transform: capitalize;
+	line-height: 65px;
+	letter-spacing: 1px;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.37);
+}
+.banner-info-grid p {
+    font-size: 16px;
+    color: #ddd;
+    margin: 2em 0;
+}
+.slider-info a.btn {
+    background: none;
+    padding: 10px 25px;
+    color: #fff;
+    border: 2px solid #fff;
+    font-size: 15px;
+    letter-spacing: 1px;
+    border-radius: 0px;
+	-webkit-border-radius: 0px;
+    -o-border-radius: 0px;
+    -moz-border-radius: 0px;
+    -ms-border-radius: 0px;
+	transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -ms-transition: 0.5s all;
+}
+.slider-info a.btn:hover {
+    opacity:0.8;
+	transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -ms-transition: 0.5s all;
+}
+.banner-text {
+    padding: 14vw 0 7vw;
+}
+.banner-image h4 {
+    font-size: 20px;
+}
