--- a/css/style.css
+++ b/css/style.css
@@ -496,3 +496,28 @@ li > a:only-child:after { content: ''; }
     color: #666;
     letter-spacing: .5px;
 }
+
+/*-- about --*/
+.about-text h3{
+    font-size: 27px;
+    font-weight: 600;
+    color: #333;
+    line-height: 38px;
+}
+	
+.about-text p {
+    font-size: 16px;
+    color: #777;
+}
+.about-img img{
+}
+.about-left h4 {
+    font-size: 40px;
+    font-weight: 600;
+    color: #ff6c5f;
+}
+.about-left h4 span {
+    font-size: 16px;
+    color: #666;
+    font-weight: normal;
+}
