--- a/css/style.css
+++ b/css/style.css
@@ -641,3 +641,21 @@ a.btn-w3layouts_pvt {
     font-size: 16px;
     color: #777;
 }
+
+/*-- services page --*/
+.serv-grids h3 {
+    font-size: 20px;
+    color: #333;
+    letter-spacing: 1px;
+    line-height: 30px;
+    text-transform: capitalize;
+}
+.serv-grids span.fa{
+    text-align: center;
+    font-size: 30px;
+    background: #ffff;
+    height: 65px;
+    width: 65px;
+    line-height: 65px;
+	box-shadow: 7px 7px 10px 0 rgba(76, 110, 245, .1);
+}
