--- a/css/style.css
+++ b/css/style.css
@@ -837,3 +837,82 @@ ul.links li a:hover,
 .copy-right-top {
     border-color: rgba(255, 255, 255, 0.2) !important;
 }
+
+/*- inner banner --*/
+
+.inner-banner {
+    height: 250px;
+}
+
+/*- inner banner --*/
+
+/*-- Contact page --*/
+.contact_right input[type="text"], .contact_right input[type="email"], .contact_right textarea {
+    outline: none;
+    padding: 12px 0;
+    background: none;
+    color: #212121;
+    font-size: 15px;
+    width: 100%;
+    letter-spacing: 1px;
+    border: none;
+    border-bottom: 1px solid #494949;
+}
+.contact_right input[type="email"] {
+    margin: 1em 0;
+}
+.contact_right textarea {
+    min-height: 145px;
+    resize: none;
+    margin-top: 1em;
+}
+.contact_right button {
+    outline: none;
+    padding: 15px 0;
+    background: #6a67ce;
+    color: #fff;
+    font-weight: 500;
+    letter-spacing: 2px;
+    margin-top: 10px;
+    width: 100%;
+    border: none;
+    cursor: pointer;
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -ms-transition: 0.5s all;
+    -o-transition: 0.5s all;
+}
+.contact_left iframe {
+    width: 100%;
+    outline: none;
+    border: none;
+    min-height: 495px;
+}
+.information h4 {
+    font-size: 22px;
+    font-weight: 600;
+    letter-spacing: 2px;
+    color: #333;
+    position: relative;
+}
+.information p {
+    font-size: 16px;
+    letter-spacing: 1px;
+    color: #666;
+    line-height: 28px;
+}
+.information p a,.information p span{
+    color: #b84592;
+}
+.information p a:hover{
+    color: #333;
+}
+.information span.fa {
+    font-size: 30px;
+    color: #b84592;
+}
+
+.contact_right,.contact_border{
+    border: 2px dotted #b84592;
+}
