--- a/css/style.css
+++ b/css/style.css
@@ -916,3 +916,55 @@ ul.links li a:hover,
 .contact_right,.contact_border{
     border: 2px dotted #b84592;
 }
+
+/*-- team --*/
+/* common styles for visual styles */
+
+.teamy_name {
+    font-size: 20px;
+    font-weight: 600;
+    color: #333;
+    letter-spacing: 1px;
+}
+.teamy_post {
+    margin-top: .5em;
+    font-size: 14px;
+    text-transform: capitalize;
+    color: #6f6f6f;
+    letter-spacing: 0.5px;
+}
+
+.teamy_content,.teamy_back {
+ text-align: center;
+}
+.teamy_back-inner span.fa {
+    color: #999;
+    font-size: 14px;
+    margin: 10px 5px;
+    width: 15px;
+    line-height: 35px;
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -ms-transition: 0.5s all;
+    -o-transition: 0.5s all;
+}
+.teamy_back-inner span.fa.fa-facebook {
+    color: #3b5998;
+}
+.teamy_back-inner span.fa.fa-facebook:hover {
+	opacity:0.8;
+}
+.teamy_back-inner span.fa.fa-twitter {
+    color: #1da1f2;
+}
+.teamy_back-inner span.fa.fa-twitter:hover{
+	opacity:0.8;
+}
+.teamy_back-inner span.fa.fa-envelope-open {
+    color: #dd4b39;
+}
+.teamy_back-inner span.fa.fa-envelope-open:hover {
+	opacity:0.8;
+}
+/*-- //team --*/
