--- a/css/style.css
+++ b/css/style.css
@@ -967,4 +967,30 @@ ul.links li a:hover,
 .teamy_back-inner span.fa.fa-envelope-open:hover {
 	opacity:0.8;
 }
-/*-- //team --*/
+
+/*-- move top --*/
+
+.move-top {
+    position: relative;
+}
+
+a.move-top {
+    text-align: center;
+    position: absolute;
+    right: 1%;
+    bottom: 0%;
+}
+
+a.move-top span{
+    color: #fff;
+    width: 36px;
+    height: 36px;
+    border: transparent;
+    line-height: 2em;
+    background: #333;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -o-border-radius: 50px;
+    -moz-border-radius: 50px;
+    -ms-border-radius: 50px;
+}
